DOMjudge Programming Contest Judging System

Version 5.0.5 - DEV
-------------------

Version 5.0.4 - 11 June 2016
----------------------------
 - Add workaround for direct array indexing of function results not
   being supported in PHP < 5.4 yet.
 - Don't compare unfreeze- and deactivatetime when latter is unset.
 - Print problems sorted by label as required by JSON scoreboard spec.
 - Fix importing penalty-time and freezetime from contest.yaml.
 - Add auditlog entry when an executable script is edited.
 - Fix appearance of "null" problem colour, and use British spelling of
   "colour" in web interface.
 - Fix dj_make_chroot failing on chmod of non-existent file.
 - Fix dj-setup-database status command.
 - Add transaction around submission upload to prevent race condition
   between a submission present, but not yet the source files.
 - Don't raise error when post_max_size=0, since that means unlimited.
 - Fix editing of executable metadata. Thanks Josse van Dobben de Bruyn.
 - In the REST API write SQL debug info to logfile to not break the API.
 - Fix variable name typo in www/jury/testcase.php.
 - Fix installing all SQL upgrade scripts.
 - Various small updates to the admin and jury manuals.

Version 5.0.3 - 2 April 2016
----------------------------
 - Fix bug in signal handler in runguard.
 - Fix importing example problem statements into database.
 - Restrict API access to problems depending on role (#200).
 - Allow verifying a judging once result is known (#196).
 - Corrections to REST API to conform to spec: truncate timestamps,
   drop problem ID from scoreboard, only output time for scoreboard
   when problem is solved.
 - Fix import functions to accept most up to date ICPC files.
 - Also copy local SSL certificates into chroot in dj_make_chroot.
 - Fix use of nonexistant specialchars() in show_source.

Version 5.0.2 - 7 December 2015
-------------------------------
 - Fix float comparison and output in default validator.